fix: prevent UI shift by setting menuShouldBlockScroll to true for Select | Fix z-index too

--- a/src/styles/components/_accessibility-menu.scss
+++ b/src/styles/components/_accessibility-menu.scss
@@ -973,7 +973,7 @@ select.accessibility-menu__select:not(.react-select__control) {
 
 // Portail des menus
 .react-select__menu-portal {
-	z-index: 1000 !important;
+	z-index: 1100 !important;
 	position: fixed !important;
 }
 
