--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -250,6 +250,7 @@
 
 			&:hover,
 			&:focus {
+				color: var(--off-white) !important;
 				text-decoration: none;
 			}
 		}
